--- a/.github/workflows/build-push-action.yml
+++ b/.github/workflows/build-push-action.yml
@@ -25,4 +25,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: robertdebock/github-action-galaxy:rawhide
+          tags: robertdebock/github-action-galaxy:latest
